src/objects/Target_FollowUp_30Day__c.object
<CustomObject>
    <description>Target number for 30-day follow up calls to be made in a month</description>
    <fields>
        <fullName>Center_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Location</label>
        <referenceTo>Center_Location__c</referenceTo>
        <relationshipName>FollowUp_30Day_Target</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>When does this target become effective?</description>
        <inlineHelpText>When does this target become effective? (Can be set in advance of becoming effective.)</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Numbert__c</fullName>
        <description>Target number of 30-day follup up calls to be made per month</description>
        <label>Target Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Target: PEC FollowUp_30Day</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>FUP30T ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target: PEC FollowUp_30Day</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>